tests/invalid/in_str_non_str/main.py
x: int = 5
y: bool = x in "hello"
